--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     margin: 0;
     padding:0 ;
     box-sizing: border-box;
+    
+}
+body{
     background-color: 	#101010;
     
 }
@@ -94,3 +97,37 @@
    transform: scale(1.01);
     
 }
+
+@media screen and (max-width: 480px) {
+    #heading {
+      font-size: 20px;
+    }
+    #minutes{
+        font-size: 50px;
+
+    }
+    #seconds{
+        font-size: 50px;
+
+    }
+    #hours{
+        font-size: 50px;
+
+    }
+    #buttons{
+        height: 80px;
+        width: 80px;
+    }
+    #buttons input{
+        height: 60px;
+        width: 80px;
+    }
+    #display{
+        width: 100%;
+        margin-top: 0;
+    }
+    #stopwatch{
+        width: 370px;
+    }
+    
+  }
